# static-program-analyzer

./: .gitignore  CPPLINT.cfg  Dockerfile  Doxyfile  Makefile  README.md  run-system-tests.py
Team05/Code05/src/spa/: CMakeLists.txt
Team05/Code05/src/spa/src/: DesignExtractor.cpp  DesignExtractor.h  Lexer.cpp  Lexer.h  PKB.cpp  PKB.h  Parser.cpp  Parser.h  SourceProcessor.cpp  SourceProcessor.h  exceptions.h  logging.h  messages.h  utils.h
Team05/Code05/src/spa/src/DesignExtractor/: CallGraph.h  DesignExtractor.cpp  DesignExtractor.h  Extractor.cpp  Extractor.h  ModifiesExtractor.cpp  ModifiesExtractor.h  PKBStrategy.cpp  PKBStrategy.h  PatternMatcher.cpp  PatternMatcher.h  StatementExtractor.cpp  StatementExtractor.h  TreeWalker.h  Treewalker.h  VariableExtractor.cpp  VariableExtractor.h
Team05/Code05/src/spa/src/PKB/: ConstantRow.cpp  ConstantRow.h  ConstantTable.cpp  ConstantTable.h  FollowsGraph.cpp  FollowsGraph.h  FollowsRelationshipTable.cpp  FollowsRelationshipTable.h  ModifiesRelationshipTable.cpp  ModifiesRelationshipTable.h  PKBCommons.h  PKBDataTypes.cpp  PKBDataTypes.h  PKBEntityType.h  PKBField.cpp  PKBField.h  PKBFieldFactory.cpp  PKBFieldFactory.h  PKBFieldType.h  PKBRelationship.h  PKBRelationshipTables.cpp  PKBRelationshipTables.h  PKBResponse.cpp  PKBResponse.h  PKBReturnType.h  PKBTables.cpp  PKBTables.h  PKBType.h  ParentGraph.cpp  ParentGraph.h  ParentRelationshipTable.cpp  ParentRelationshipTable.h  ProcedureRow.cpp  ProcedureRow.h  ProcedureTable.cpp  ProcedureTable.h  RelationshipRow.cpp  RelationshipRow.h  RelationshipTable.cpp  RelationshipTable.h  (+17 more)
Team05/Code05/src/spa/src/Parser/: AST.cpp  AST.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Validator.cpp  Validator.h
Team05/Code05/src/spa/src/QPS/: ClauseHandler.cpp  ClauseHandler.h  Evaluator.cpp  Evaluator.h  Lexer.cpp  Lexer.h  Optimizer.cpp  Optimizer.h  PKBTypeMatcher.cpp  PKBTypeMatcher.h  Parser.cpp  Parser.h  QPS.cpp  QPS.h  Query.cpp  Query.h  ResultProjector.cpp  ResultProjector.h  ResultTable.cpp  ResultTable.h
Team05/Code05/src/spa/src/pql/: Query.cpp  Query.h  QueryObject.cpp  QueryObject.h  clausehandler.cpp  clausehandler.h  evaluator.cpp  evaluator.h  handleModifies.cpp  handleModifies.h  handleRelations.cpp  handleRelations.h  handlerelations.cpp  handlerelations.h  lexer.cpp  lexer.h  optimizer.cpp  optimizer.h  parser.cpp  parser.h  pkbtypematcher.cpp  pkbtypematcher.h  qps.cpp  qps.h  query.cpp  query.h  resultTable.cpp  resultTable.h  resultprojector.cpp  resultprojector.h  resulttable.cpp  resulttable.h  test_query.h
Team05/Code05/src/unit_testing/: CMakeLists.txt
Team05/Code05/src/unit_testing/src/: TestAST.cpp  TestCFG.cpp  TestConstantRow.cpp  TestConstantTable.cpp  TestDesignExtractor.cpp  TestFollowsRelationshipTable.cpp  TestLexer.cpp  TestModifiesRelationshipTable.cpp  TestPKB.cpp  TestPKBField.cpp  TestPKBResponse.cpp  TestPKBTables.cpp  TestParentRelationshipTable.cpp  TestParser.cpp  TestProcedureRow.cpp  TestProcedureTable.cpp  TestRelationshipRow.cpp  TestStatementRow.cpp  TestStatementTable.cpp  TestUsesRelationshipTable.cpp  TestVariableRow.cpp  TestVariableTable.cpp
Team05/Code05/src/unit_testing/src/parser/: TestAST.cpp  TestLexer.cpp  TestParser.cpp
Team05/Code05/src/unit_testing/src/pkb/: TestPKB.cpp  TestPKBField.cpp  TestPKBResponse.cpp  TestPKBTables.cpp
Team05/Code05/src/unit_testing/src/pql/: evaluator_tests.cpp  lexer.cpp  lexer_tests.cpp  optimizer_tests.cpp  parser.cpp  parser_tests.cpp  qps_tests.cpp  query_tests.cpp  resultprojector_tests.cpp  (+7 more)
(+229 files in other folders)
